修改百度去除广告

--- a/css/content-d.css
+++ b/css/content-d.css
@@ -1,3 +1,12 @@
 #content_right{
-  display: none;
+  display: none !important;
+}
+
+#content_left>div[style='display:block !important;visibility:visible !important'] {
+  height: 0;
+  overflow: hidden;
+}
+#content_left>div[class='result c-container'] {
+  height: 0;
+  overflow: hidden;
 }
